--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-handlebars-boilerplate",
+  "name": "bracket-builder",
   "version": "1.0.0",
-  "description": "Project 2 Starter",
+  "description": "Bracket Builder Application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
