--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,14 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "exampledb",
+    "database": "bracketdb",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "testdb",
+    "database": "bracketdb",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
