--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Gobby911!",
+    "password": "08Subaru!",
     "database": "bracketdb",
     "host": "localhost",
     "dialect": "mysql"
